# mail_ds_monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  TODOS.md  docker-compose.yml
back_end/: .env.example  .gitignore  README.md  pyproject.toml
back_end/app/: __init__.py  main.py
back_end/app/api/: deps.py
back_end/app/core/: config.py  datetime_utils.py  exceptions.py  scheduler.py  security.py
back_end/app/db/: init_db.py  session.py
back_end/app/models/: __init__.py  active_task_lock.py  analysis_run.py  archive.py  enums.py  failure_capture.py  failure_queue.py  mail_message.py  mailbox.py  mixins.py  sender_profile.py  service_report.py  summary.py  task_log.py  user.py
back_end/app/schemas/: analysis_run.py  auth.py  capture_runs.py  common.py  failure_queue.py  failure_rules.py  mail_message.py  mailbox.py  sender_profile.py  service_report.py  summary.py  system.py  task_log.py
back_end/app/services/: auth_service.py  capture_scheduler_service.py  customer_analysis_service.py  extraction_retry_scheduler.py  extraction_retry_service.py  extraction_service.py  imap_service.py  llm_service.py  mail_pull_service.py  mailbox_service.py  sender_matching_service.py  sender_profile_service.py  service_report_service.py  smtp_service.py  summary_service.py  task_log_service.py
back_end/app/tests/: conftest.py  test_archive_fields.py  test_async_endpoints.py  test_capture_scheduler.py  test_dependency_override.py  test_failure_capture_rules.py  test_failure_queue_api.py  test_imap_service.py  (+8 more)
back_end/scripts/: init_db.py
(+110 files in other folders)
